
  * This object model design change means that facets are no longer
    transferred with an object sent by value.

  * If your application receives an object with facets from an older
    version of Ice, a MarshalException is raised. This is unavoidable
    because it is a change to the object model, and not just to the
    way objects are transferred or encoded.

- Ice no longer retries operation calls on RequestFailedException.
  (ObjectNotExistException, OperationNotExistException, and
  FacetNotExistException are derived from RequestFailedException.)

- Fixed link errors when building Ice without BerkeleyDB in the
  shared library search path.

- Added ConnectionRefusedException as a specialization of
  ConnectFailedException, to indicate if a connection fails because a
  server actively refuses the connection.

- The documentation claimed that the Ice.ProgramName property was
  initialized to the value of argv[0], but that initialization was in
  fact not happening. As of this version, Ice.ProgramName is
  initialized correctly.

- Fixed the slice2cpp compiler for operations with multiple exceptions
  in an exception specification: if an exception was a base of one or
  more other exceptions in the same exception specification, the code
  generator sometimes emitted the catch blocks in the marshaling and
  dispatch code in the wrong order.

Changes since version 1.2.0
---------------------------

- Added FreezeScript, which consists of the tools dumpdb and
  transformdb for inspecting and migrating Freeze databases,
  respectively.

- The IceStorm server now uses a single database for all topics,
  which makes topic creation much faster.

- Added the virtual member functions ice_preMarshal and
  ice_postUnmarshal to Ice::Object. The default implementations do
  nothing, but subclasses may override them to take special action
  before marshaling and after unmarshaling, respectively.

- Added the demo/IcePack/simple example.
