@@ -475,8 +475,12 @@ IceInternal::ReferenceFactory::create(const Identity& ident, BasicStream* s)
     vector<string> facetPath;
     s->read(facetPath);
     string facet;
-    if(!facetPath.empty()) // TODO: Throw an exception if facetPath has more than one element?
+    if(!facetPath.empty())
     {
+	if(facetPath.size() > 1)
+	{
+	    throw ProxyUnmarshalException(__FILE__, __LINE__);
+	}
 	facet.swap(facetPath[0]);
     }
 
